Disable button if captcha not submitted

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                 data-sitekey="6Ld54R0hAAAAABQR3pqp0bns77cKtHRVcj7akLuF"
                                 data-callback="captcha_successful"
                             ></div>
-                            <button id="sendEmailButton" class="contact-btn" type="submit">Submit</button>
+                            <button id="sendEmailButton" class="contact-btn" type="submit" disabled>Submit</button>
                         </div>
                     </form>
                 </div>
