Make contact-me form responsive on mobile devices

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <form>
                         <h1>Let<span>'</span>s Talk</h1>
                         <div class="contact-me-form">
-                            <div>
+                            <div class="input-wrapper">
                                 <input type="text" id="nameInput" placeholder=" " />
                                 <label for="nameInput">
                                     <span style="transition-delay: 0ms">N</span>
@@ -253,7 +253,7 @@
                                     <span style="transition-delay: 200ms">*</span>
                                 </label>
                             </div>
-                            <div>
+                            <div class="input-wrapper">
                                 <input type="email" id="emailInput" placeholder=" " />
                                 <label for="emailInput">
                                     <span style="transition-delay: 0ms">E</span>
@@ -264,7 +264,7 @@
                                     <span style="transition-delay: 250ms">*</span>
                                 </label>
                             </div>
-                            <div>
+                            <div class="input-wrapper">
                                 <textarea name="Message" id="messageInput" cols="30" rows="10" required></textarea>
                                 <label for="messageInput">
                                     <span style="transition-delay: 0ms">M</span>
