Make contact-me-page responsive on desktop view and improve html

--- a/index.html
+++ b/index.html
@@ -283,12 +283,14 @@
                                 data-sitekey="6Ld54R0hAAAAABQR3pqp0bns77cKtHRVcj7akLuF"
                                 data-callback="captcha_successful"
                             ></div>
-                            <button id="sendEmailButton" class="contact-btn" type="submit" disabled>Submit</button>
+                            <button id="sendEmailButton" class="contact-btn" type="submit" disabled="disabled">Submit</button>
                         </div>
                     </form>
                 </div>
+
+                <!--Mobile-->
                 <!--Shadow-->
-                <svg class="contact-page-shadow" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="contact-page-shadow mobile" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M25.1559 65.3232C26.2461 48.7818 37.4443 34.8951 53.5642 31.0282C99.2971 20.0575 200.543 0 329.5 0C465.546 0 534.622 26.1419 559.466 38.3523C566.88 41.9961 571.953 48.5401 574.51 56.3951C590.003 103.989 645.345 289.74 650.5 529C655.229 748.505 641.011 922.662 634.775 986.596C633.209 1002.65 621.907 1015.76 606.106 1019.03C563.677 1027.79 469.789 1043 329.5 1043C188.513 1043 94.3907 1027.63 52.2651 1018.9C36.7972 1015.69 25.5948 1003.04 23.6781 987.359C15.4329 919.907 -4.82587 728.669 1.99998 525.5C8.76992 323.995 20.6146 134.226 25.1559 65.3232Z"
                         fill="url(#paint0_linear_209_57)"
@@ -299,89 +301,38 @@
                     </linearGradient>
                 </svg>
                 <!--Background-->
-                <svg class="contact-page-background" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="contact-page-background mobile" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M25.1559 65.3232C26.2461 48.7818 37.4443 34.8951 53.5642 31.0282C99.2972 20.0575 200.543 0 329.5 0C459.139 0 560.773 20.2703 606.157 31.2016C621.92 34.9984 632.992 48.476 634.391 64.6296C640.643 136.82 657 343.1 657 525.5C657 707.48 640.718 913.231 634.434 985.87C633.014 1002.29 621.591 1015.85 605.451 1019.16C562.715 1027.94 469.072 1043 329.5 1043C188.513 1043 94.3907 1027.63 52.2651 1018.9C36.7972 1015.69 25.5948 1003.04 23.6781 987.359C15.4329 919.907 -4.82587 728.669 1.99998 525.5C8.76992 323.995 20.6146 134.226 25.1559 65.3232Z"
                     />
                 </svg>
                 <!--Foreground-->
-                <svg class="contact-page-foreground" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="contact-page-foreground mobile" viewBox="0 0 657 1043" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         transform="scale(1.003) translate(0 3.5)"
                         d="M178 104.5C228.5 99.3711 242.851 104.5 300.5 50.5C340 13.5 377.5 0.5 421.5 0.5C500.096 4.27537 569.976 19.1236 606.072 28.0642C621.835 31.9686 632.994 45.4985 634.395 61.6776C640.651 133.912 657 340.141 657 522.5C657 704.48 640.719 910.231 634.434 982.87C633.014 999.286 621.591 1012.85 605.451 1016.16C562.715 1024.94 469.072 1040 329.5 1040C188.513 1040 94.391 1024.63 52.2653 1015.9C36.7973 1012.69 25.5948 1000.04 23.678 984.358C15.4328 916.907 -4.82586 725.668 1.99998 522.5C5.94924 404.952 10.5541 312.897 15.5 225C17.7292 185.384 32 150.454 69.5 128.5C107 106.546 127.5 109.629 178 104.5Z"
                     />
                 </svg>
-            </div>
-        </div>
 
-        <div class="contact-me-page desktop">
-            <div class="contact-me-wrapper">
-                <div class="contact-me-content">
-                    <form>
-                        <h1>Let<span>'</span>s Talk</h1>
-                        <div class="contact-me-form">
-                            <div class="input-wrapper">
-                                <input type="text" id="nameInput" placeholder=" " />
-                                <label for="nameInput">
-                                    <span style="transition-delay: 0ms">N</span>
-                                    <span style="transition-delay: 50ms">a</span>
-                                    <span style="transition-delay: 100ms">m</span>
-                                    <span style="transition-delay: 150ms">e</span>
-                                    <span style="transition-delay: 200ms">*</span>
-                                </label>
-                            </div>
-                            <div class="input-wrapper">
-                                <input type="email" id="emailInput" placeholder=" " />
-                                <label for="emailInput">
-                                    <span style="transition-delay: 0ms">E</span>
-                                    <span style="transition-delay: 50ms">m</span>
-                                    <span style="transition-delay: 100ms">a</span>
-                                    <span style="transition-delay: 150ms">i</span>
-                                    <span style="transition-delay: 200ms">l</span>
-                                    <span style="transition-delay: 250ms">*</span>
-                                </label>
-                            </div>
-                            <div class="input-wrapper">
-                                <textarea name="Message" id="messageInput" cols="30" rows="10" required></textarea>
-                                <label for="messageInput">
-                                    <span style="transition-delay: 0ms">M</span>
-                                    <span style="transition-delay: 50ms">e</span>
-                                    <span style="transition-delay: 100ms">s</span>
-                                    <span style="transition-delay: 150ms">s</span>
-                                    <span style="transition-delay: 200ms">a</span>
-                                    <span style="transition-delay: 250ms">g</span>
-                                    <span style="transition-delay: 300ms">e</span>
-                                    <span style="transition-delay: 350ms">*</span>
-                                </label>
-                            </div>
-                            <!--recaptcha-->
-                            <div
-                                class="g-recaptcha"
-                                data-sitekey="6Ld54R0hAAAAABQR3pqp0bns77cKtHRVcj7akLuF"
-                                data-callback="captcha_successful"
-                            ></div>
-                            <button id="sendEmailButton" class="contact-btn" type="submit" disabled>Submit</button>
-                        </div>
-                    </form>
-                </div>
+                <!--Desktop-->
                 <!--Shadow-->
-                <svg class="contact-page-shadow" viewBox="0 0 1060 1010" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="contact-page-shadow desktop" viewBox="0 0 1060 1010" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M639.2 159.82C711.969 193.82 864.303 12.4955 918.712 72.2795C973.654 130.462 987.136 254.095 1005.41
-                    332.321C1023.09 408.025 1059.58 481.386 1049.16 558.427C1038.62 636.447 988.657 701.34 946.532 767.842C902.28 837.703
-                    868.591 922.957 794.726 960.109C720.907 997.237 632.553 962.528 550.064 967.253C466.292 972.051 379.144 1022.22 302.385
-                    988.311C225.556 954.374 164.99 845.202 139.92 770.471C82.7211 706.802 58.7902 669.096 31.6356 587.917C4.59306 507.074
-                    -10.7904 449.473 8.89651 366.53C27.7816 286.964 31.5448 200.102 81.6009 135.448C131.386 71.1444 215.271 48.0686 286.215
-                    8.33754C358.376 -32.0749 413.548 87.5113 496.244 88.2926C579.156 89.076 564.074 124.719 639.2 159.82Z"
-                    fill="red"
+                                    332.321C1023.09 408.025 1059.58 481.386 1049.16 558.427C1038.62 636.447 988.657 701.34 946.532 767.842C902.28 837.703
+                                    868.591 922.957 794.726 960.109C720.907 997.237 632.553 962.528 550.064 967.253C466.292 972.051 379.144 1022.22 302.385
+                                    988.311C225.556 954.374 164.99 845.202 139.92 770.471C82.7211 706.802 58.7902 669.096 31.6356 587.917C4.59306 507.074
+                                    -10.7904 449.473 8.89651 366.53C27.7816 286.964 31.5448 200.102 81.6009 135.448C131.386 71.1444 215.271 48.0686 286.215
+                                    8.33754C358.376 -32.0749 413.548 87.5113 496.244 88.2926C579.156 89.076 564.074 124.719 639.2 159.82Z"
+                        fill="red"
                     />
                     <linearGradient id="contact-page-shadow-gradient-desktop" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color: #EC6931; stop-opacity: 1" />
-                        <stop offset="100%" style="stop-color: #F6980B; stop-opacity: 1" />
+                        <stop offset="0%" style="stop-color: #ec6931; stop-opacity: 1" />
+                        <stop offset="100%" style="stop-color: #f6980b; stop-opacity: 1" />
                     </linearGradient>
                 </svg>
                 <!--Foreground-->
-                <svg class="contact-page-foreground" viewBox="0 0 1060 1010" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="contact-page-foreground desktop" viewBox="0 0 1060 1010" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M817.767 39.6017C825.77 41.8662 898.494 53.6442 951.717 113.759C1004.93 173.864 996.12 264.934 1014.39 343.072C1032.08 418.691 1068.58 491.969 1058.16 568.923C1047.61 646.855 997.641 711.675 955.506 778.103C911.243 847.886 877.545 933.044 803.662 970.153C729.824 1007.24 641.448 972.57 558.938 977.29C475.145 982.083 387.975 1032.19 311.197 998.324C234.349 964.425 175.369 843.742 146.024 811.122C121.081 783.396 48.7114 708.217 17.6353 615.443C-9.41408 534.69 -2.05669 460.092 17.6352 377.242C36.525 297.766 40.2892 211.001 90.3578 146.42C147.13 73.1926 163.096 55.2465 270.875 16.1416C334.368 -6.89527 466.155 0.678885 522.178 3.34515C648.067 9.33648 809.764 37.3373 817.767 39.6017Z"
                     />
