Add structure for mobile menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </li>
                             <li><button class="navbar-contact-btn contact-btn">Contact me!</button></li>
                         </div>
-                        <button class="navbar-mobile-toggle navbar-item">Menu</button>
+                        <button class="navbar-item" id="navbar-mobile-toggle">Menu</button>
                     </div>
                 </div>
             </nav>
@@ -351,6 +351,17 @@
                     />
                 </svg>
             </div>
+        </div>
+
+        <div class="mobile-menu">
+            <div class="close-menu">
+                ✖
+            </div>
+            <ul class="menu-items">
+                <li>About me</li>
+                <li>Technologies</li>
+                <li>Projects</li>
+            </ul>
         </div>
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
