Import css files directly to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Julian Jesacher</title>
         <link rel="stylesheet" href="styles/styles.css" />
+        <link rel="stylesheet" href="styles/about-me-section.styles.css" />
+        <link rel="stylesheet" href="styles/contact-me-page.styles.css" />
+        <link rel="stylesheet" href="styles/darkmode-toggle.styles.css" />
+        <link rel="stylesheet" href="styles/footer-section.styles.css" />
+        <link rel="stylesheet" href="styles/projects-section.styles.css" />
+        <link rel="stylesheet" href="styles/utils.styles.css" />
+        <link rel="stylesheet" href="styles/welcome-section.styles.css" />
         <script type="text/javascript" src="contact-me.controller.js"></script>
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </head>
