--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="styles/utils.styles.css" />
         <link rel="stylesheet" href="styles/welcome-section.styles.css" />
         <link rel="stylesheet" href="styles/mobile-menu.styles.css" />
-        <script type="text/javascript" src="contact-me.controller.js"></script>
+        <script type="text/javascript" src="src/contact-me.controller.js"></script>
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </head>
     <body>
@@ -379,7 +379,7 @@
         </div>
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-        <script type="text/javascript" src="darkmode.controller.js"></script>
-        <script type="text/javascript" src="footer.controller.js"></script>
+        <script type="text/javascript" src="src/darkmode.controller.js"></script>
+        <script type="text/javascript" src="src/footer.controller.js"></script>
     </body>
 </html>
