Refactor contact-me-controller

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
         </section>
 
-        <div class="contact-me-page mobile">
+        <div class="contact-me-page mobile" id="contact-me-page">
             <div class="contact-me-wrapper">
                 <div class="contact-me-content">
                     <form>
