--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
                 <h2>Projects</h2>
                 <p>These are some of my cooles projects</p>
             </div>
-            <div class="project-wrapper">
+            <div class="project-wrapper" id="projects-wrapper">
                 <div class="project">
                     <div class="project-title">Great Project 1</div>
                     <div class="project-image-wrapper">
                         <img class="project-image" src="/assets/project-image.jpg" alt="Great Project 1 image" />
                         <!--Github link for mobile-->
-                        <a href="https://github.com/JulianJesacher" title="Github" class="transition social-icon-wrapper">
+                        <a href="https://github.com/JulianJesacher" title="Project Github Link" class="transition social-icon-wrapper">
                             <lottie-player
                                 class="project-social-icon"
                                 src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
@@ -383,5 +383,6 @@
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script type="text/javascript" src="src/darkmode.controller.js"></script>
         <script type="text/javascript" src="src/footer.controller.js"></script>
+        <script type="text/javascript" src="src/projects.controller.js"></script>
     </body>
 </html>
