--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section class="projects-section">
             <div class="section-title">
                 <h2>Projects</h2>
-                <p>These are some of my cooles projects</p>
+                <p>These are some of my coolest projects</p>
             </div>
             <div class="project-wrapper" id="projects-wrapper">
                 <div class="project">
