Make mobile-menu appear/disappear

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </li>
                             <li><button class="navbar-contact-btn contact-btn">Contact me!</button></li>
                         </div>
-                        <button class="navbar-item" id="navbar-mobile-toggle">Menu</button>
+                        <button class="navbar-item" id="open-mobile-menu">Menu</button>
                     </div>
                 </div>
             </nav>
@@ -363,8 +363,8 @@
             </div>
         </div>
 
-        <div class="mobile-menu">
-            <div class="close-menu">✖</div>
+        <div class="mobile-menu transition" id="mobile-menu">
+            <button class="close-menu" id="close-mobile-menu">✖</button>
             <ul class="menu-items">
                 <li>
                     <div class="darkmode-slider">
@@ -384,5 +384,6 @@
         <script type="text/javascript" src="src/darkmode.controller.js"></script>
         <script type="text/javascript" src="src/footer.controller.js"></script>
         <script type="text/javascript" src="src/projects.controller.js"></script>
+        <script type="text/javascript" src="src/mobile-menu.controller.js"></script>
     </body>
 </html>
