--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </section>
 
-        <section class="about-me-section">
+        <section class="about-me-section" id="about-me">
             <svg class="about-me-background" width="1920" height="1228" viewBox="0 0 1920 1228" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1893.77 0L35.4566 131H0V1228L1920 1127.5V0H1893.77Z" />
             </svg>
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        <section class="projects-section">
+        <section class="projects-section" id="projects">
             <div class="section-title">
                 <h2>Projects</h2>
                 <p>These are some of my coolest projects</p>
@@ -374,9 +374,9 @@
                         </label>
                     </div>
                 </li>
-                <li>About me</li>
-                <li>Technologies</li>
-                <li>Projects</li>
+                <li><a href="#about-me">About me</a></li>
+                <li><a href="#">Technologies</a></li>
+                <li><a href="#projects">Projects</a></li>
             </ul>
         </div>
 
