--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                             <div
                                 class="g-recaptcha"
                                 data-sitekey="6Ld54R0hAAAAABQR3pqp0bns77cKtHRVcj7akLuF"
-                                data-callback="captcha_successful"
-                                data-expired-callback="captcha_expired"
+                                data-callback="captchaSuccessful"
+                                data-expired-callback="captchaExpired"
                             ></div>
                             <button id="sendEmailButton" class="contact-btn" type="submit" disabled="disabled">Submit</button>
                         </div>
