--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="contact-me-page mobile" id="contact-me-page">
             <div class="contact-me-wrapper">
                 <div class="contact-me-content">
-                    <form>
+                    <form autocomplete="off">
                         <h1>Let<span>'</span>s Talk</h1>
                         <div class="contact-me-form">
                             <div class="input-wrapper">
@@ -293,7 +293,7 @@
                                 data-callback="captchaSuccessful"
                                 data-expired-callback="captchaExpired"
                             ></div>
-                            <button id="sendEmailButton" class="contact-btn" type="submit" disabled="disabled">Submit</button>
+                            <button id="sendEmailButton" class="contact-btn" type="submit" disabled>Submit</button>
                         </div>
                     </form>
                 </div>
