Import gsap cdk

--- a/index.html
+++ b/index.html
@@ -402,6 +402,8 @@
         </div>
 
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
         <script type="text/javascript" src="src/darkmode.controller.js"></script>
         <script type="text/javascript" src="src/footer.controller.js"></script>
         <script type="text/javascript" src="src/projects.controller.js"></script>
