Remove redundant input ids

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <h1>Let<span>'</span>s Talk</h1>
                         <div class="contact-me-form">
                             <div class="input-wrapper">
-                                <input name="name" type="text" id="nameInput" placeholder=" " />
+                                <input name="name" type="text" placeholder=" " />
                                 <label for="nameInput">
                                     <span style="transition-delay: 0ms">N</span>
                                     <span style="transition-delay: 50ms">a</span>
@@ -264,7 +264,7 @@
                                 </label>
                             </div>
                             <div class="input-wrapper">
-                                <input name="email" type="email" id="emailInput" placeholder=" " />
+                                <input name="email" type="email" placeholder=" " />
                                 <label for="emailInput">
                                     <span style="transition-delay: 0ms">E</span>
                                     <span style="transition-delay: 50ms">m</span>
@@ -275,7 +275,7 @@
                                 </label>
                             </div>
                             <div class="input-wrapper">
-                                <textarea name="message" id="messageInput" cols="30" rows="10" required></textarea>
+                                <textarea name="message" cols="30" rows="10" required></textarea>
                                 <label for="messageInput">
                                     <span style="transition-delay: 0ms">M</span>
                                     <span style="transition-delay: 50ms">e</span>
