Make contact-me inputs required

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <h1>Let<span>'</span>s Talk</h1>
                         <div class="contact-me-form">
                             <div class="input-wrapper">
-                                <input name="name" type="text" placeholder=" " />
+                                <input name="name" type="text" placeholder=" " required/>
                                 <label for="nameInput">
                                     <span style="transition-delay: 0ms">N</span>
                                     <span style="transition-delay: 50ms">a</span>
@@ -264,7 +264,7 @@
                                 </label>
                             </div>
                             <div class="input-wrapper">
-                                <input name="email" type="email" placeholder=" " />
+                                <input name="email" type="email" placeholder=" " required/>
                                 <label for="emailInput">
                                     <span style="transition-delay: 0ms">E</span>
                                     <span style="transition-delay: 50ms">m</span>
