Add anchor-tags to navbar items

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                             <div class="logo-wrapper navbar-item"><span>Logo</span></div>
                         </div>
                         <div class="navbar-content-right">
-                            <li class="navbar-item transition">About me</li>
-                            <li class="navbar-item transition">Technologies</li>
-                            <li class="navbar-item transition">Projects</li>
+                            <li><a href="#about-me" class="navbar-item transition">About me</a></li>
+                            <li><a href="#" class="navbar-item transition">Technologies</a></li>
+                            <li><a href="#projects" class="navbar-item transition">Projects</a></li>
                             <li>
                                 <div class="darkmode-slider">
                                     <label for="darkmode-checkbox">
@@ -254,7 +254,7 @@
                         <h1>Let<span>'</span>s Talk</h1>
                         <div class="contact-me-form">
                             <div class="input-wrapper">
-                                <input name="name" type="text" placeholder=" " required/>
+                                <input name="name" type="text" placeholder=" " required />
                                 <label for="nameInput">
                                     <span style="transition-delay: 0ms">N</span>
                                     <span style="transition-delay: 50ms">a</span>
@@ -264,7 +264,7 @@
                                 </label>
                             </div>
                             <div class="input-wrapper">
-                                <input name="email" type="email" placeholder=" " required/>
+                                <input name="email" type="email" placeholder=" " required />
                                 <label for="emailInput">
                                     <span style="transition-delay: 0ms">E</span>
                                     <span style="transition-delay: 50ms">m</span>
