Add feedback to contact-me form

--- a/index.html
+++ b/index.html
@@ -295,6 +295,24 @@
                                 data-expired-callback="captchaExpired"
                             ></div>
                             <button id="sendEmailButton" class="contact-btn" type="submit" disabled>Submit</button>
+                            <lottie-player
+                                id="success-lottie"
+                                src="https://assets4.lottiefiles.com/packages/lf20_rc5d0f61.json"
+                                background="transparent"
+                                speed="1"
+                                style="height: 5em"
+                                loop
+                                autoplay
+                            ></lottie-player>
+                            <lottie-player
+                                id="error-lottie"
+                                src="https://assets8.lottiefiles.com/packages/lf20_sii02z44.json"
+                                background="transparent"
+                                speed="1"
+                                style="height: 5em"
+                                loop
+                                autoplay
+                            ></lottie-player>
                         </div>
                     </form>
                 </div>
