Remove lorem ipsum project

--- a/index.html
+++ b/index.html
@@ -127,46 +127,7 @@
                 <h2>Projects</h2>
                 <p>These are some of my coolest projects</p>
             </div>
-            <div class="project-wrapper" id="projects-wrapper">
-                <div class="project">
-                    <div class="project-title">Great Project 1</div>
-                    <div class="project-image-wrapper">
-                        <img class="project-image" src="/assets/project-image.jpg" alt="Great Project 1 image" />
-                        <!--Github link for mobile-->
-                        <a href="https://github.com/JulianJesacher" title="Project Github Link" class="transition social-icon-wrapper">
-                            <lottie-player
-                                class="project-social-icon"
-                                src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
-                                background="transparent"
-                                speed="1"
-                                style="width: 70%; height: 70%"
-                                hover
-                                loop
-                            ></lottie-player>
-                        </a>
-                    </div>
-                    <div class="project-content">
-                        <p class="project-description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet
-                            odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                        </p>
-                        <div class="project-content-separator"></div>
-                        <a href="#" class="view-project-btn">View demo</a>
-                        <!--Github link for desktop-->
-                        <a href="https://github.com/JulianJesacher" title="Github" class="transition social-icon-wrapper">
-                            <lottie-player
-                                class="project-social-icon"
-                                src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
-                                background="transparent"
-                                speed="1"
-                                style="width: 70%; height: 70%"
-                                hover
-                                loop
-                            ></lottie-player>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <div class="project-wrapper" id="projects-wrapper"></div>
         </section>
 
         <section class="footer-section">
