--- a/index.html
+++ b/index.html
@@ -63,39 +63,68 @@
                                 title="LinkedIn Profile"
                                 class="transition social-icon-wrapper"
                             >
-                                <svg class="social-icon" viewBox="0 0 480 459" xmlns="http://www.w3.org/2000/svg" width="60%">
-                                    <path
-                                        d="M58.21 -0.250977C23.0127 -0.250977 0 22.8613 0 53.2393C0 82.9463 22.3271 106.718 56.8594 106.718H57.5273C93.4131 106.718 115.746 82.9463 115.746 53.2393C115.075 22.8613 93.4131 -0.250977 58.21 -0.250977V-0.250977Z"
-                                    />
-                                    <path d="M6.08203 148.984H108.979V458.553H6.08203V148.984Z" />
-                                    <path
-                                        d="M361.541 141.719C306.032 141.719 268.811 193.879 268.811 193.879V148.984H165.911V458.553H268.805V285.678C268.805 276.423 269.476 267.183 272.194 260.564C279.633 242.084 296.561 222.938 324.987 222.938C362.221 222.938 377.112 251.327 377.112 292.943V458.553H480V281.052C480 185.966 429.234 141.719 361.541 141.719V141.719Z"
-                                    />
-                                </svg>
+                                <lottie-player
+                                    class="social-icon dark"
+                                    src="https://assets9.lottiefiles.com/packages/lf20_48gweasv.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 65%"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                <lottie-player
+                                    class="social-icon light"
+                                    src="https://assets5.lottiefiles.com/packages/lf20_z06en56h.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 65%"
+                                    hover
+                                    loop
+                                ></lottie-player>
                             </a>
                             <a
                                 href="https://www.instagram.com/_julian_jsc/"
                                 title="Instagram Profile"
                                 class="transition social-icon-wrapper"
                             >
-                                <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 511 511.9" width="70%">
-                                    <path
-                                        d="m510.949219 150.5c-1.199219-27.199219-5.597657-45.898438-11.898438-62.101562-6.5-17.199219-16.5-32.597657-29.601562-45.398438-12.800781-13-28.300781-23.101562-45.300781-29.5-16.296876-6.300781-34.898438-10.699219-62.097657-11.898438-27.402343-1.300781-36.101562-1.601562-105.601562-1.601562s-78.199219.300781-105.5 1.5c-27.199219 1.199219-45.898438 5.601562-62.097657 11.898438-17.203124 6.5-32.601562 16.5-45.402343 29.601562-13 12.800781-23.097657 28.300781-29.5 45.300781-6.300781 16.300781-10.699219 34.898438-11.898438 62.097657-1.300781 27.402343-1.601562 36.101562-1.601562 105.601562s.300781 78.199219 1.5 105.5c1.199219 27.199219 5.601562 45.898438 11.902343 62.101562 6.5 17.199219 16.597657 32.597657 29.597657 45.398438 12.800781 13 28.300781 23.101562 45.300781 29.5 16.300781 6.300781 34.898438 10.699219 62.101562 11.898438 27.296876 1.203124 36 1.5 105.5 1.5s78.199219-.296876 105.5-1.5c27.199219-1.199219 45.898438-5.597657 62.097657-11.898438 34.402343-13.300781 61.601562-40.5 74.902343-74.898438 6.296876-16.300781 10.699219-34.902343 11.898438-62.101562 1.199219-27.300781 1.5-36 1.5-105.5s-.101562-78.199219-1.300781-105.5zm-46.097657 209c-1.101562 25-5.300781 38.5-8.800781 47.5-8.601562 22.300781-26.300781 40-48.601562 48.601562-9 3.5-22.597657 7.699219-47.5 8.796876-27 1.203124-35.097657 1.5-103.398438 1.5s-76.5-.296876-103.402343-1.5c-25-1.097657-38.5-5.296876-47.5-8.796876-11.097657-4.101562-21.199219-10.601562-29.398438-19.101562-8.5-8.300781-15-18.300781-19.101562-29.398438-3.5-9-7.699219-22.601562-8.796876-47.5-1.203124-27-1.5-35.101562-1.5-103.402343s.296876-76.5 1.5-103.398438c1.097657-25 5.296876-38.5 8.796876-47.5 4.101562-11.101562 10.601562-21.199219 19.203124-29.402343 8.296876-8.5 18.296876-15 29.398438-19.097657 9-3.5 22.601562-7.699219 47.5-8.800781 27-1.199219 35.101562-1.5 103.398438-1.5 68.402343 0 76.5.300781 103.402343 1.5 25 1.101562 38.5 5.300781 47.5 8.800781 11.097657 4.097657 21.199219 10.597657 29.398438 19.097657 8.5 8.300781 15 18.300781 19.101562 29.402343 3.5 9 7.699219 22.597657 8.800781 47.5 1.199219 27 1.5 35.097657 1.5 103.398438s-.300781 76.300781-1.5 103.300781zm0 0"
-                                    ></path>
-                                    <path
-                                        d="m256.449219 124.5c-72.597657 0-131.5 58.898438-131.5 131.5s58.902343 131.5 131.5 131.5c72.601562 0 131.5-58.898438 131.5-131.5s-58.898438-131.5-131.5-131.5zm0 216.800781c-47.097657 0-85.300781-38.199219-85.300781-85.300781s38.203124-85.300781 85.300781-85.300781c47.101562 0 85.300781 38.199219 85.300781 85.300781s-38.199219 85.300781-85.300781 85.300781zm0 0"
-                                    ></path>
-                                    <path
-                                        d="m423.851562 119.300781c0 16.953125-13.746093 30.699219-30.703124 30.699219-16.953126 0-30.699219-13.746094-30.699219-30.699219 0-16.957031 13.746093-30.699219 30.699219-30.699219 16.957031 0 30.703124 13.742188 30.703124 30.699219zm0 0"
-                                    ></path>
-                                </svg>
+                                <lottie-player
+                                    class="social-icon dark"
+                                    src="https://assets7.lottiefiles.com/packages/lf20_ljxwdbyy.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 100%; transform: scale(1.5)"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                <lottie-player
+                                    class="social-icon light"
+                                    src="https://assets8.lottiefiles.com/packages/lf20_6hd2hbd9.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 100%; transform: scale(1.5)"
+                                    hover
+                                    loop
+                                ></lottie-player>
                             </a>
                             <a href="https://github.com/JulianJesacher" title="Github Profile" class="transition social-icon-wrapper">
-                                <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="75%">
-                                    <path
-                                        d="M255.968,5.329C114.624,5.329,0,120.401,0,262.353c0,113.536,73.344,209.856,175.104,243.872    c12.8,2.368,17.472-5.568,17.472-12.384c0-6.112-0.224-22.272-0.352-43.712c-71.2,15.52-86.24-34.464-86.24-34.464    c-11.616-29.696-28.416-37.6-28.416-37.6c-23.264-15.936,1.728-15.616,1.728-15.616c25.696,1.824,39.2,26.496,39.2,26.496    c22.848,39.264,59.936,27.936,74.528,21.344c2.304-16.608,8.928-27.936,16.256-34.368    c-56.832-6.496-116.608-28.544-116.608-127.008c0-28.064,9.984-51.008,26.368-68.992c-2.656-6.496-11.424-32.64,2.496-68    c0,0,21.504-6.912,70.4,26.336c20.416-5.696,42.304-8.544,64.096-8.64c21.728,0.128,43.648,2.944,64.096,8.672    c48.864-33.248,70.336-26.336,70.336-26.336c13.952,35.392,5.184,61.504,2.56,68c16.416,17.984,26.304,40.928,26.304,68.992    c0,98.72-59.84,120.448-116.864,126.816c9.184,7.936,17.376,23.616,17.376,47.584c0,34.368-0.32,62.08-0.32,70.496    c0,6.88,4.608,14.88,17.6,12.352C438.72,472.145,512,375.857,512,262.353C512,120.401,397.376,5.329,255.968,5.329z"
-                                    ></path>
-                                </svg>
+                                <lottie-player
+                                    class="social-icon dark"
+                                    src="https://assets4.lottiefiles.com/packages/lf20_pbgriaz0.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 70%"
+                                    hover
+                                    loop
+                                ></lottie-player>
+                                <lottie-player
+                                    class="social-icon light"
+                                    src="https://assets5.lottiefiles.com/packages/lf20_vb2mcaz9.json"
+                                    background="transparent"
+                                    speed="1"
+                                    style="width: 70%"
+                                    hover
+                                    loop
+                                ></lottie-player>
                             </a>
                         </div>
                     </div>
@@ -146,20 +175,21 @@
                     >
                         <lottie-player
                             class="social-icon"
-                            src="https://assets4.lottiefiles.com/packages/lf20_ewqwndz3.json"
+                            src="https://assets9.lottiefiles.com/packages/lf20_48gweasv.json"
                             background="transparent"
                             speed="1"
-                            style="width: 65%; height: 65%"
+                            style="width: 65%"
                             hover
                             loop
                         ></lottie-player>
                     </a>
                     <a href="https://www.instagram.com/_julian_jsc/" title="Instagram" class="transition social-icon-wrapper">
                         <lottie-player
-                            src="https://assets10.lottiefiles.com/packages/lf20_k8myxshf.json"
+                            class="social-icon"
+                            src="https://assets7.lottiefiles.com/packages/lf20_ljxwdbyy.json"
                             background="transparent"
                             speed="1"
-                            style="width: 80%; height: 80"
+                            style="width: 100%; transform: scale(1.5)"
                             hover
                             loop
                         ></lottie-player>
@@ -167,10 +197,10 @@
                     <a href="https://github.com/JulianJesacher" title="Github" class="transition social-icon-wrapper">
                         <lottie-player
                             class="social-icon"
-                            src="https://assets4.lottiefiles.com/packages/lf20_easggm31.json"
+                            src="https://assets4.lottiefiles.com/packages/lf20_pbgriaz0.json"
                             background="transparent"
                             speed="1"
-                            style="width: 70%; height: 70%"
+                            style="width: 70%"
                             hover
                             loop
                         ></lottie-player>
