Pass .env variables to config.json

--- a/index.html
+++ b/index.html
@@ -422,6 +422,6 @@
         <script type="text/javascript" src="src/projects.controller.js"></script>
         <script type="text/javascript" src="src/mobile-menu.controller.js"></script>
         <script type="text/javascript" src="src/contact-me.controller.js"></script>
-        <script type="text/javascript" src="src/emailjs-keys.js"></script>
+        <script type="text/javascript" src="src/config.js"></script>
     </body>
 </html>
