--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Personal portolio to showcase the projects I've been working on and to provide a means of contacting me easily"
+        />
+        <meta
+            name="keywords"
+            content="Computer Science, Student, Developer, Julian Jesacher, Software Engineer, Computer Science Student"
+        />
         <title>Julian Jesacher</title>
         <link rel="stylesheet" href="styles/styles.css" />
         <link rel="stylesheet" href="styles/about-me-section.styles.css" />
@@ -129,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <img class="welcome-portrait" src="/assets/portrait.png" alt="Portrait of myself" />
+                <img class="welcome-portrait" src="/assets/portrait.webp" alt="Portrait of myself" />
             </div>
         </section>
 
