Implement basic foundation of vertical scroll

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <h2>Projects</h2>
                 <p>These are some of my coolest projects</p>
             </div>
-            <div class="project-wrapper" id="projects-wrapper"></div>
+            <div class="projects-container" id="projects-container"></div>
         </section>
 
         <section class="footer-section">
